--- a/SACA-AE/www/index.html
+++ b/SACA-AE/www/index.html
@@ -69,24 +69,8 @@
         -->
         <script type="application/javascript" src="app_framework/2.1/appframework.js"></script>
         <script type="application/javascript" src="app_framework/2.1/appframework.ui.js" data-ver="1"></script>
+        <script type="application/javascript" src="js/index_user_scripts.js"></script>
     </head>
-
-	    <script type="text/javascript">
-        $(document).ready(function () {
-        var items = '<ul class="list widget uib_w_2 d-margins" data-uib="app_framework/listview" data-ver="1">';
-            for(i=0;i<7;i++)
-            {
-                
-                items += '<li class="widget uib_w_8" data-uib="app_framework/listitem" data-ver="1"><a href="#detail_page" data-transition="fade">Item ->'+i+'</a></li>';
-                
-            }
-
-            if (items != "") {
-                items += '</ul><span class="uib_shim"></span>';
-                $("#datos").html(items);
-            }
-        });
-    </script>
 
     <body id="afui">
 
@@ -96,7 +80,7 @@
         <header class="wrapping-col wrap-element uib_w_1" data-uib="app_framework/header" data-ver="2" id="af-header-0">
             <h1>Login</h1>
         </header>
-		        <header class="wrapping-col wrap-element uib_w_12" data-uib="app_framework/header" data-ver="2" id="af-header-6">
+        <header class="wrapping-col wrap-element uib_w_12" data-uib="app_framework/header" data-ver="2" id="af-header-6">
             <h1>Cursos/Comisiones/Proyectos</h1>
         </header>
         <header class="wrapping-col wrap-element uib_w_13 with-back" data-uib="app_framework/header" data-ver="2" id="af-header-7"><a class="button backButton">Volver</a>
@@ -124,9 +108,9 @@
                                         </div>
                                     </div>
                                     <div class="table-thing with-label widget uib_w_8" data-uib="app_framework/input" data-ver="1">
-                                        <input class="wide-control" placeholder="Email" type="text">
+                                        <input class="wide-control" placeholder="Email" type="text" id="txt_correo">
                                     </div>
-									<a class="button widget uib_w_10 d-margins green" data-uib="app_framework/button" data-ver="1"  href="#selection_page">Login</a><span class="uib_shim"></span>
+                                    <a class="button widget uib_w_10 d-margins green" data-uib="app_framework/button" data-ver="1" id="but_login">Login</a><span class="uib_shim"></span>
                                 </div>
                             </div>
                             <span class="uib_shim"></span>
@@ -134,8 +118,8 @@
                     </div>
                 </div>
                 <!-- /upage-outer -->
-            </div> 
-		    <div class="upage panel" id="selection_page" data-header="none" data-footer="none">
+            </div>
+            <div class="upage panel" id="selection_page" data-header="none" data-footer="none">
                 <div class="upage-outer">
                     <div class="upage-content" id="selectionsub">
 
@@ -158,11 +142,11 @@
                                         </div>
                                     </div>
                                     <ul class="list widget uib_w_3 d-margins" data-uib="app_framework/listview" data-ver="1">
-                                        <li class="widget uib_w_4" data-uib="app_framework/listitem" data-ver="1"><a  href="#list_page">Cursos</a>
+                                        <li class="widget uib_w_4" data-uib="app_framework/listitem" data-ver="1"><a href="#list_page">Cursos</a>
                                         </li>
-                                        <li class="widget uib_w_5" data-uib="app_framework/listitem" data-ver="1"><a  href="#list_page">Comisiones</a>
+                                        <li class="widget uib_w_5" data-uib="app_framework/listitem" data-ver="1"><a href="#list_page">Comisiones</a>
                                         </li>
-										 <li class="widget uib_w_4" data-uib="app_framework/listitem" data-ver="1"><a  href="#list_page">Proyectos</a>
+                                        <li class="widget uib_w_4" data-uib="app_framework/listitem" data-ver="1"><a href="#list_page">Proyectos</a>
                                         </li>
                                     </ul><span class="uib_shim"></span>
                                 </div>
@@ -176,7 +160,7 @@
                 <!-- /upage-outer -->
 
             </div>
-		    <div class="upage vertical-col panel" id="list_page" data-header="af-header-6" data-footer="none">
+            <div class="upage vertical-col panel" id="list_page" data-header="af-header-6" data-footer="none">
                 <div class="grid grid-pad urow uib_row_1 row-height-1" data-uib="layout/row" data-ver="0">
                     <div class="col uib_col_1 col-0_12-12" data-uib="layout/col" data-ver="0">
                         <div id="datos" class="widget-container content-area vertical-col">
@@ -186,7 +170,7 @@
                     <span class="uib_shim"></span>
                 </div>
             </div>
-			<div class="upage vertical-col panel" id="detail_page" data-header="af-header-7" data-footer="none">
+            <div class="upage vertical-col panel" id="detail_page" data-header="af-header-7" data-footer="none">
                 <div class="grid grid-pad urow uib_row_2 row-height-2" data-uib="layout/row" data-ver="0">
                     <div class="col uib_col_2 col-0_12-12" data-uib="layout/col" data-ver="0">
                         <div class="widget-container content-area vertical-col">
@@ -203,7 +187,7 @@
                     <span class="uib_shim"></span>
                 </div>
             </div>
-		</div>
+        </div>
     </body>
 
 </html>
