Se ve listView en Comisiones

--- a/SACA-AE/www/index.html
+++ b/SACA-AE/www/index.html
@@ -80,6 +80,9 @@
         <script type="application/javascript" src="sidebar/js/jquery.hammer.js"></script>
         <script type="application/javascript" src="sidebar/js/swipe-hammer.js"></script>
         <script type="application/javascript" src="sidebar/js/sidebar.js"></script>
+
+<!-- Required if building app using Intel XDK -->    
+    <script src="intelxdk.js"></script>
     </head>
 
     <body id="afui">
@@ -178,8 +181,7 @@
                         <div class="widget-container content-area vertical-col">
 
                             <ul class="list widget uib_w_25 d-margins" data-uib="app_framework/listview" data-ver="1" id ="list_comisiones5">
-                                <li class="widget uib_w_28" data-uib="app_framework/listitem" data-ver="1"><a>List Item</a>
-                                </li>
+                                
                             </ul><span class="uib_shim"></span>
                         </div>
                     </div>
