Carga detalle comisiones Funcionando
Funciona la carga de comisiones en la pagina page_detail. Se muestran
todos los datos menos la hora inicio. Corregir problema

--- a/SACA-AE/www/index.html
+++ b/SACA-AE/www/index.html
@@ -93,11 +93,11 @@
         <header class="wrapping-col wrap-element uib_w_1" data-uib="app_framework/header" data-ver="2" id="af-header-0">
             <h1>Login</h1>
         </header>
-        <header class="wrapping-col wrap-element uib_w_12" data-uib="app_framework/header" data-ver="2" id="af-header-6">
-            <h1>Comisiones</h1>
+        <header class="wrapping-col wrap-element uib_w_12" data-uib="app_framework/header" data-ver="2" id="af-header-6"><a class="button backButton" onclick="borrarContenido(1)">Volver</a>
+            <h1></h1>
         </header>
-        <header class="wrapping-col wrap-element uib_w_13 with-back" data-uib="app_framework/header" data-ver="2" id="af-header-7"><a class="button backButton">Volver</a>
-            <h1>Hola soy Item 1</h1>
+        <header class="wrapping-col wrap-element uib_w_13 with-back" data-uib="app_framework/header" data-ver="2" id="af-header-7"><a class="button backButton" onclick="borrarContenido(2)">Volver</a>
+            <h1></h1>
         </header>
         <div id="content" class="uwrap">
             <div class="upage vertical-col panel" id="mainpage" data-header="af-header-0" data-footer="none">
@@ -160,7 +160,7 @@
                                         </li>
                                         <li class="widget uib_w_5" data-uib="app_framework/listitem" data-ver="1"><a href="#list_page">Comisiones</a>
                                         </li>
-                                        <li class="widget uib_w_4" data-uib="app_framework/listitem" data-ver="1"><a href="#list_page">Proyectos</a>
+                                        <li class="widget uib_w_9" data-uib="app_framework/listitem" data-ver="1"><a href="#list_page">Proyectos</a>
                                         </li>
                                     </ul><span class="uib_shim"></span>
                                 </div>
@@ -196,8 +196,8 @@
                             <div class="widget uib_w_14 d-margins" data-uib="media/text" data-ver="0">
                                 <div class="widget-container left-receptacle"></div>
                                 <div class="widget-container right-receptacle"></div>
-                                <div id="informacion">
-                                    <p>Toda la info va aquí!</p>
+                                <div id="div_detalle">
+                                    
                                 </div>
                             </div><span class="uib_shim"></span>
                         </div>
