--- a/SACA-AE/www/index.html
+++ b/SACA-AE/www/index.html
@@ -123,7 +123,7 @@
                                     <div class="table-thing with-label widget uib_w_8" data-uib="app_framework/input" data-ver="1">
                                         <input class="wide-control" placeholder="Email" type="text" id="txt_correo">
                                     </div>
-                                    <a class="button widget uib_w_10 d-margins green" data-uib="app_framework/button" data-ver="1" id="but_login">Login</a><a class="button widget uib_w_15 d-margins" data-uib="app_framework/button" data-ver="1" id="but_prueba">Button</a>
+                                    <a class="button widget uib_w_10 d-margins green" data-uib="app_framework/button" data-ver="1" id="but_login">Login</a>
                                     <span class="uib_shim"></span>
                                 </div>
                             </div>
@@ -145,14 +145,14 @@
                                         <div class="widget-container left-receptacle"></div>
                                         <div class="widget-container right-receptacle"></div>
                                         <div>
-                                            <p>Bienvenido</p>
+                                            <h1>Bienvenido</h1>
                                         </div>
                                     </div>
                                     <div class="widget uib_w_2 d-margins center" data-uib="media/text" data-ver="0">
                                         <div class="widget-container left-receptacle"></div>
                                         <div class="widget-container right-receptacle"></div>
                                         <div>
-                                            <p>Seleccione lo que desea consultar</p>
+                                            <h3>Seleccione lo que desea consultar</h3>
                                         </div>
                                     </div>
                                     <ul class="list widget uib_w_3 d-margins" data-uib="app_framework/listview" data-ver="1">
