--- a/SACA-AE/www/index.html
+++ b/SACA-AE/www/index.html
@@ -156,11 +156,11 @@
                                         </div>
                                     </div>
                                     <ul class="list widget uib_w_3 d-margins" data-uib="app_framework/listview" data-ver="1">
-                                        <li class="widget uib_w_4" data-uib="app_framework/listitem" data-ver="1"><a href="#list_page">Cursos</a>
+                                        <li class="widget uib_w_4" data-uib="app_framework/listitem" data-ver="1"><img src="img/curso_img.png" border="0"><a href="#list_page">Cursos</a>
                                         </li>
-                                        <li class="widget uib_w_5" data-uib="app_framework/listitem" data-ver="1"><a href="#list_page">Comisiones</a>
+                                        <li class="widget uib_w_5" data-uib="app_framework/listitem" data-ver="1"><img src="img/comision_img.png" border="0"><a href="#list_page">Comisiones</a>
                                         </li>
-                                        <li class="widget uib_w_9" data-uib="app_framework/listitem" data-ver="1"><a href="#list_page">Proyectos</a>
+                                        <li class="widget uib_w_9" data-uib="app_framework/listitem" data-ver="1"><img src="img/proyecto_img.png" border="0"><a href="#list_page">Proyectos</a>
                                         </li>
                                     </ul><span class="uib_shim"></span>
                                 </div>
