Botones con imagenes + boton desloguearse

--- a/SACA-AE/www/index.html
+++ b/SACA-AE/www/index.html
@@ -99,6 +99,9 @@
         <header class="wrapping-col wrap-element uib_w_13 with-back" data-uib="app_framework/header" data-ver="2" id="af-header-7"><a class="button backButton" onclick="borrarContenido(2)">Volver</a>
             <h1></h1>
         </header>
+        <header class="wrapping-col wrap-element uib_w_13 with-back" data-uib="app_framework/header" data-ver="2" id="af-header-5"><a class="button backButton">Salir</a>
+            <h1></h1>
+        </header>
         <div id="content" class="uwrap">
             <div class="upage vertical-col panel" id="mainpage" data-header="af-header-0" data-footer="none">
                 <div class="upage-outer">
@@ -133,7 +136,7 @@
                 </div>
                 <!-- /upage-outer -->
             </div>
-            <div class="upage panel" id="selection_page" data-header="none" data-footer="none">
+            <div class="upage panel" id="selection_page" data-header="af-header-5" data-footer="none">
                 <div class="upage-outer">
                     <div class="upage-content" id="selectionsub">
 
@@ -156,11 +159,11 @@
                                         </div>
                                     </div>
                                     <ul class="list widget uib_w_3 d-margins" data-uib="app_framework/listview" data-ver="1">
-                                        <li class="widget uib_w_4" data-uib="app_framework/listitem" data-ver="1"><a href="#list_page">Cursos</a>
+                                        <li class="widget uib_w_4" data-uib="app_framework/listitem" data-ver="1"><img src="img/curso_img.png" border="0"><a href="#list_page">Cursos</a>
                                         </li>
-                                        <li class="widget uib_w_5" data-uib="app_framework/listitem" data-ver="1"><a href="#list_page">Comisiones</a>
+                                        <li class="widget uib_w_5" data-uib="app_framework/listitem" data-ver="1"><img src="img/comision_img.png" border="0"><a href="#list_page">Comisiones</a>
                                         </li>
-                                        <li class="widget uib_w_9" data-uib="app_framework/listitem" data-ver="1"><a href="#list_page">Proyectos</a>
+                                        <li class="widget uib_w_9" data-uib="app_framework/listitem" data-ver="1"><img src="img/proyecto_img.png" border="0"><a href="#list_page">Proyectos</a>
                                         </li>
                                     </ul><span class="uib_shim"></span>
                                 </div>
