--- a/SACA-AE/www/index.html
+++ b/SACA-AE/www/index.html
@@ -131,7 +131,7 @@ window['_native_XMLHttpRequest'] = window.XMLHttpRequest; // xhr.js store it too
                                         <input class="wide-control" placeholder="Email" type="text" id="txt_correo">
                                     </div>
                                     <div class="table-thing with-label widget uib_w_8" data-uib="app_framework/input" data-ver="1">
-                                        <input class="wide-control" placeholder="Password" type="text" id="txt_correo">
+                                        <input class="wide-control" placeholder="Password" type="text" id="txt_contra">
                                     </div>
                                     <a class="button widget uib_w_10 d-margins green" data-uib="app_framework/button" data-ver="1" id="but_login">Login</a>
                                     <span class="uib_shim"></span>
